fix error with Bootstrap grid spacing on desktop size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,14 +147,15 @@ form input {
 /* ---------------------------------------- Tablet Styles ---------------------------------------- */
 
 @media(min-width: 768px) {
-    
+
     img {
         object-fit: contain;
     }
 
-
 }
 
 @media(min-width: 992px) {
-
+    .card {
+        width: 25%;
+    }
 }
